# Arma3-Tactical-Airlift

./: .gitignore  LICENSE.md  README.md
.github/workflows/: ci.yml  codeql.yml
AI/Arma3AIAgents/: pyproject.toml
AI/Context Files/: Tactical-Airlift-LLM-Context.md
AI/Modelfiles/: arma3missionassistant.json
Tactical-Airlift.Altis/: ammoSupplies.sqf  gearSupplies.sqf  heal.sqf  icons.sqf  init.sqf  medicalSupplies.sqf  mission.sqm  points.sqf  reduction.sqf  spawnEnemy.sqf  updateSupplies.sqf
Tactical-Airlift.Altis/icons/: ammo.paa  gear.paa  medical.paa
