[tool.poetry]
name = "arma3aiagents"
version = "0.1.0"
description = ""
authors = ["Sudo Ivan <Sudo-Ivan>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<=3.13"
crewai = "0.30.11"
crewai-tools = "0.2.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
